Implementé funcionalidad para crear, editar y eliminar reseñas, así como ver detalle de un producto con carga asíncrona.